2009-01-27  Naohiro Aota  <naota@elisp.net>

	* w3m-proc.el (w3m-process-stop): Call `w3m-idle-images-show-unqueue'.

	* w3m.el (w3m-idle-images-show-timer, w3m-idle-images-show-list)
	(w3m-idle-images-show-interval): New variables.
	(w3m-idle-images-show, w3m-idle-images-show-unqueue): New functions.
	(w3m-toggle-inline-images-internal): Use them.

2009-01-26  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-content-type-alist): Add "application/x-pdf" content
	type.

2009-01-21  Kevin Ryde  <user42@zip.com.au>

	* w3m.el (w3m-search-name-anchor): Return true meaning "found" if
	point is already at the anchor position.

2009-01-21  Naohiro Aota  <naota@elisp.net>

	* w3m-session.el (w3m-session-last-autosave-session): Check if
	autosaved sessions set exists before asking whether to load the last
	sessions set; Search older sessions sets when the last sessions set
	doesn't exist (maybe it is removed by user); Load autosaved sessions
	set when w3m-session-load-last-sessions is non-nil.
	(w3m-session-load-last-sessions): Fix docstring; Change `auto' to `t'.
	(w3m-session-crash-recovery-title): New variable.
	(w3m-session-load-crashed-sessions): Ditto.
	(w3m-session-crash-recovery-save): New function.

	* w3m.el (w3m-goto-url): Save sessions set for crash recovering.
	(w3m-delete-buffer): Ditto.
	(w3m): Load crashed sessions if necessary.  Suggested by Samuel Wales
	<samologist@gmail.com>.

2009-01-20  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-fontify-anchors): Use new `w3m-balloon-help'
	text-property for balloon help.
	(w3m-fontify-images): Ditto and create help together href, alt and URL
	of image.

2009-01-19  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-image-anchor): Fix docstring.
	(toplevel): Fix w3m-image-anchor-face's alias.

2009-01-15  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-fontify-images): Put the 'full alt text' on new
	'w3m-image-alt' property.
	(w3m-print-this-url): Print the content of 'w3m-image-alt'.
