@@ -1,3 +1,7 @@
+2009-01-28  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-proc.el: Autoload w3m-idle-images-show-unqueue when compiling.
+
 2009-01-27  Naohiro Aota  <naota@elisp.net>
 
 	* w3m-proc.el (w3m-process-stop): Call `w3m-idle-images-show-unqueue'.
